# InteractiveHtmlBom

./: .gitignore  .jsbeautifyrc  AGENTS.md  ARSETUP.md  DATAFORMAT.md  IMPLEMENTATION_SUMMARY.md  README.md  WORKFLOW_STATE.md  __init__.py  dhr_soulreapermxi.css  ipc_entrypoint.py  make_release.py  plugin.json  pyproject.toml  requirements.txt  settings_dialog.fbp
.github/workflows/: ci.yml  release.yml
.opencode/agent/: debater.md  git_matador.md  implementor.md  linter.md  planner.md  reviewer.md
Downloads/InteractiveHtmlBom-master/InteractiveHtmlBom-master/: .gitignore  DATAFORMAT.md  LICENSE  README.md  __init__.py  pyproject.toml  settings_dialog.fbp
InteractiveHtmlBom/: Run.bat  __init__.py  centroid2pcbdata.py  compat.py  config.py  dialog_test.py  errors.py  fontparser.py  generate_interactive_bom.py  ibom.css  ibom.html  ibom.js  render.js  units.py  util.js  version.py  xmlbom.py
InteractiveHtmlBom/core/: config.py  fontparser.py  ibom.py  lzstring.py  newstroke_font.py  units.py
InteractiveHtmlBom/dialog/: __init__.py  dialog_base.py  settings_dialog.py
InteractiveHtmlBom/ecad/: __init__.py  allegro.py  altiumdesigner.py  common.py  eagle.py  easyeda.py  fusion_eagle.py  generic.py  genericjson.py  kicad.py  svgpath.py
InteractiveHtmlBom/ecad/kicad_extra/: __init__.py  netlistparser.py  parser_base.py  sexpressions.py  xmlparser.py
InteractiveHtmlBom/ecad/schema/: genericjsonpcbdata_v1.schema
InteractiveHtmlBom/i18n/: .gitattributes  language_en.bat  language_zh.bat
InteractiveHtmlBom/i18n/en_UK/: language_en.bat
InteractiveHtmlBom/i18n/zh_CN/: language_zh.bat
InteractiveHtmlBom/schematic_data/: __init__.py  netlistparser.py  parser_base.py  xmlparser.py
InteractiveHtmlBom/skill/: README.md  ibom.il
InteractiveHtmlBom/skill/font-data/: font_data
InteractiveHtmlBom/web/: ar.js  colors_readme.html  excelExport.js  ibom.css  ibom.html  ibom.js  ibom1.html  lz-string.js  pep.js  render.js  split.js  table-drag.js  table-util.js  util.js
InteractiveHtmlBom/web/user-file-examples/: user.css  user.js  userfooter.html  userheader.html
(+10 files in other folders)
